output based questions added

--- a/src/app/courses/javascript/lesssion/interview-outout-based/interview-outout-based.component.html
+++ b/src/app/courses/javascript/lesssion/interview-outout-based/interview-outout-based.component.html
@@ -1,6 +1,156 @@
 <div class="javascript-interviews">
+    <h1>Javascript output based questions!</h1>
+
     <div class="questions">
-        <h1>Javascript output based questions!</h1>
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code1" language="javascript"></prismcode>
+        <ol>
+            <li>Undefined</li>
+            <li>ReferenceError</li>
+            <li>null</li>
+            <li>&#123; model: "Honda", color: "white", year: "2010", country: "UK" &#125;</li>
+        </ol>
+        <p><b>Answer: </b>4</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code2" language="javascript"></prismcode>
+        <ol>
+            <li>1, undefined and undefined</li>
+            <li>ReferenceError: X is not defined</li>
+            <li>1, undefined and number</li>
+            <li>1, number and number</li>
+        </ol>
+        <p><b>Answer: </b>3</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code3" language="javascript"></prismcode>
+        <ol>
+            <li>A, B and C</li>
+            <li>B, A and C</li>
+            <li>A and C</li>
+            <li>A, C and B</li>
+        </ol>
+        <p><b>Answer: </b>4</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code4" language="javascript"></prismcode>
+        <ol>
+            <li>false</li>
+            <li>true</li>
+        </ol>
+        <p><b>Answer: </b>1</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code5" language="javascript"></prismcode>
+        <ol>
+            <li>1function</li>
+            <li>1object</li>
+            <li>ReferenceError</li>
+            <li>1undefined</li>
+        </ol>
+        <p><b>Answer: </b>4</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code6" language="javascript"></prismcode>
+        <ol>
+            <li>Hello World</li>
+            <li>Object &#123; message: "Hello World" &#123;</li>
+            <li>Undefined</li>
+            <li>SyntaxError</li>
+        </ol>
+        <p><b>Answer: </b>3</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code7" language="javascript"></prismcode>
+        <ol>
+            <li>[empty, 'b', 'c', 'd'], empty, 3</li>
+            <li> [null, 'b', 'c', 'd'], empty, 3</li>
+            <li>[empty, 'b', 'c', 'd'], undefined, 4</li>
+            <li> [null, 'b', 'c', 'd'], undefined, 4</li>
+        </ol>
+        <p><b>Answer: </b>3</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code8" language="javascript"></prismcode>
+        <ol>
+            <li>[undefined × 3], [undefined × 2, 100], [undefined × 3]</li>
+            <li>[empty × 3], [empty × 2, 100], [empty × 3]</li>
+            <li>[null × 3], [null × 2, 100], [null × 3]</li>
+            <li>[], [100], []</li>
+        </ol>
+        <p><b>Answer: </b>2</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code9" language="javascript"></prismcode>
+        <ol>
+            <li>0, 1, 2</li>
+            <li>0, &#123; return 1 &#125;, 2</li>
+            <li>0, &#123; return 1 &#125;, &#123; return 2 &#125;</li>
+            <li>0, 1, undefined</li>
+        </ol>
+        <p><b>Answer: </b>1</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code10" language="javascript"></prismcode>
+        <ol>
+            <li>true, true</li>
+            <li>true, false</li>
+            <li>SyntaxError, SyntaxError,</li>
+            <li>false, false</li>
+        </ol>
+        <p><b>Answer: </b>2</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b>4</p>
     </div>
 
 </div>
