--- a/src/app/courses/javascript/lesssion/interview-outout-based/interview-outout-based.component.scss
+++ b/src/app/courses/javascript/lesssion/interview-outout-based/interview-outout-based.component.scss
@@ -8,4 +8,45 @@
             font-weight: 600;
         }
     }
+    
+    .answers {
+        margin-left: 20px;
+
+        p {
+            color: #000000;
+            font-size: 14px;
+            font-weight: 500;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 16px;
+
+            th {
+                border: 1px solid #a1a1a1;
+                text-align: left;
+                padding: 8px;
+                color: #000;
+                font-size: 14px;
+                background-color: #e2d8ff;
+                font-weight: 500;
+                word-break: break-word;
+            }
+
+            td {
+                border: 1px solid #a1a1a1;
+                text-align: left;
+                padding: 8px;
+                color: #000;
+                font-size: 14px;
+                font-weight: 500;
+                word-break: break-word;
+            }
+        }
+        ol{
+            margin: 16px 0px;
+        }
+
+    }
 }
