output based qa added

--- a/src/app/courses/javascript/lesssion/interview-outout-based/interview-outout-based.component.html
+++ b/src/app/courses/javascript/lesssion/interview-outout-based/interview-outout-based.component.html
@@ -140,7 +140,131 @@
     </div>
 
     <div class="questions">
+        <h1>What is the output of below code in non-strict mode?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li>1, 2, 3</li>
+            <li>3, 2, 3</li>
+            <li>SyntaxError: Duplicate parameter name not allowed in this context</li>
+            <li>1, 2, 1</li>
+        </ol>
+        <p><b>Answer: </b>2</p>
+    </div>
+
+    <div class="questions">
         <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code12" language="javascript"></prismcode>
+        <ol>
+            <li>ReferenceError: arguments is not defined</li>
+            <li>3</li>
+            <li>undefined</li>
+            <li>null</li>
+        </ol>
+        <p><b>Answer: </b>1</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code13" language="javascript"></prismcode>
+        <ol>
+            <li>True, False</li>
+            <li>False, True</li>
+        </ol>
+        <p><b>Answer: </b>2</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code14" language="javascript"></prismcode>
+        <ol>
+            <li>undefined</li>
+            <li>Infinity</li>
+            <li>0</li>
+            <li>-Infinity</li>
+        </ol>
+        <p><b>Answer: </b>4</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code15" language="javascript"></prismcode>
+        <ol>
+            <li>True, True</li>
+            <li> True, False</li>
+            <li>False, False</li>
+            <li>False, True</li>
+        </ol>
+        <p><b>Answer: </b>1</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code16" language="javascript"></prismcode>
+        <ol>
+            <li>20, 0</li>
+            <li>1010, 0</li>
+            <li>1010, 10-10</li>
+            <li>NaN, NaN</li>
+        </ol>
+        <p><b>Answer: </b>2</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code17" language="javascript"></prismcode>
+        <ol>
+            <li>True, I'm True</li>
+            <li>True, I'm False</li>
+            <li>False, I'm True</li>
+            <li>False, I'm False</li>
+        </ol>
+        <p><b>Answer: </b>1</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code18" language="javascript"></prismcode>
+        <ol>
+            <li>[1,2,3,4]</li>
+            <li>[1,2][3,4]</li>
+            <li>SyntaxError</li>
+            <li>1,23,4</li>
+        </ol>
+        <p><b>Answer: </b>4</p>
+    </div>
+
+    <div class="questions">
+        <h1>What is the output of below code?</h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code19" language="javascript"></prismcode>
+        <ol>
+            <li>&#123; 1, 2, 3, 4 &#125;, &#123; "F", "i", "r", "e", "f", "o", "x" &#125;</li>
+            <li>&#123; 1, 2, 3, 4 &#125;, &#123; "F", "i", "r", "e", "o", "x" &#125;</li>
+            <li>[1, 2, 3, 4], ["F", "i", "r", "e", "o", "x"]</li>
+            <li>&#123; 1, 1, 2, 3, 4 &#125;, &#123; "F", "i", "r", "e", "f", "o", "x" &#125;</li>
+        </ol>
+        <p><b>Answer: </b>1</p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
     </div>
     <div class="answers">
         <prismcode [code]="code11" language="javascript"></prismcode>
@@ -150,7 +274,566 @@
             <li></li>
             <li></li>
         </ol>
-        <p><b>Answer: </b>4</p>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
     </div>
 
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
+    
+    <div class="questions">
+        <h1></h1>
+    </div>
+    <div class="answers">
+        <prismcode [code]="code11" language="javascript"></prismcode>
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+        <p><b>Answer: </b></p>
+    </div>
 </div>
